remove stale param

--- a/examples/parse/demo_excel.ipynb
+++ b/examples/parse/demo_excel.ipynb
@@ -43,7 +43,7 @@
    "source": [
     "from llama_cloud_services import LlamaParse\n",
     "\n",
-    "api_key = \"llx-jwAQZL8T38onyL9hKBOXyRtnuCU0Fk3z7tmDhIT3L0GEfohJ\"  # get from cloud.llamaindex.ai"
+    "api_key = \"llx-...\"  # get from cloud.llamaindex.ai"
    ]
   },
   {
